--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -47,8 +47,8 @@
                 <a href="cv.pdf" class="botonsecundario" download>Descargar CV</a>
             </div>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/bautistaaris"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/bautista-aris-05261a23b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
         <div class="imagen">
@@ -226,7 +226,7 @@
                     </div>
                     <div class="proyecto-card-actions">
                         <a href="../Identikit/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                        <a href="https://github.com/bautistaaris/Linktree" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                     </div>
                     <div class="proyecto-card-actions">
                         <a href="../Blog/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                        <a href="https://github.com/bautistaaris/Linktree" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="proyecto-card-actions">
                         <a href="../Portfolio/Proyectos/Calculadora/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                        <a href="https://github.com/bautistaaris/Linktree" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="proyecto-card-actions">
                         <a href="../Portfolio/Proyectos/Galeria/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                        <a href="https://github.com/bautistaaris/Linktree" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
@@ -298,13 +298,13 @@
                     </div>
                     <div class="proyecto-card-actions">
                         <a href="../Portfolio/Proyectos/Botonera/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                        <a href="https://github.com/bautistaaris/Linktree" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                    <img src="../Portfolio/imagenes/figma.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>Aplicacion Escolar <span class="proyecto-tipo">Diseño</span></h3>
@@ -313,8 +313,8 @@
                         <span class="proyecto-tag">Figma</span>
                     </div>
                     <div class="proyecto-card-actions">
-                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                        <a href="https://www.figma.com/proto/cXRqgks1ONssna0PjC3Aqi/Quix-Landing-Page?node-id=0-1&t=HaSmvIyIWctXm3Tu-1" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="https://github.com/bautistaaris/Linktree" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
@@ -356,8 +356,8 @@
                     </div>
                 </div>
                 <div class="contacto-redes">
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/bautistaaris"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/bautista-aris-05261a23b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
             <form class="contacto-form">
