--- a/Portfolio/Proyectos/Botonera/index.html
+++ b/Portfolio/Proyectos/Botonera/index.html
@@ -16,11 +16,11 @@
         <button class="btn">Messi</button>
         <button class="btn">Pipa</button>
     </div>
-    <audio id="audio1" src="/Portfolio/Proyectos/Botonera/sonidos/quinteroooooo.mp3"></audio>
-    <audio id="audio2" src="/Portfolio/Proyectos/Botonera/sonidos/no-hay-plata.mp3"></audio>
-    <audio id="audio3" src="/Portfolio/Proyectos/Botonera/sonidos/agarrate-agarrrate.mp3"></audio>
-    <audio id="audio4" src="/Portfolio/Proyectos/Botonera/sonidos/que-miras-bobo-messi.mp3"></audio>
-    <audio id="audio5" src="/Portfolio/Proyectos/Botonera/sonidos/pipa-pipa-pipa-no-no-no-corto.mp3"></audio>
+    <audio id="audio1" src="../Portfolio/Proyectos/Botonera/sonidos/quinteroooooo.mp3"></audio>
+    <audio id="audio2" src="../Portfolio/Proyectos/Botonera/sonidos/no-hay-plata.mp3"></audio>
+    <audio id="audio3" src="../Portfolio/Proyectos/Botonera/sonidos/agarrate-agarrrate.mp3"></audio>
+    <audio id="audio4" src="../Portfolio/Proyectos/Botonera/sonidos/que-miras-bobo-messi.mp3"></audio>
+    <audio id="audio5" src="../Portfolio/Proyectos/Botonera/sonidos/pipa-pipa-pipa-no-no-no-corto.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
